Prevent accidental page refreshes on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 html {
-    @apply bg-gray-800 overflow-x-hidden;
+    @apply bg-gray-800 overflow-x-hidden overscroll-y-contain;
 }
